--- a/HomePage.html
+++ b/HomePage.html
@@ -70,7 +70,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="ChatUI.html">FAQ</a></li>
-              <li><a>Forums</a></li>
+              <li><a href="Forums.html">Forums</a></li>
               <li><a href="ContactUs.html">Contact Us</a></li>               
             </ul>
           </li>
@@ -249,6 +249,21 @@
             </div>
             <div class="team">
               <ul class="team_nav">
+				<li>
+                  <div class="team_img">
+                    <img src="img/jason.jpg" alt="team-img">
+                  </div>
+                  <div class="team_content">
+                    <h4 class="team_name">Jason Yue</h4>
+                    <p>Information Systems Specialist</p>
+                  </div>
+                  <div class="team_social">
+                    <a href="#"><span class="fa fa-facebook"></span></a>
+                    <a href="#"><span class="fa fa-twitter"></span></a>
+                    <a href="#"><span class="fa fa-linkedin"></span></a>
+                    <a href="#"><span class="fa fa-google-plus"></span></a>
+                  </div>
+                </li>
                 <li>
                   <div class="team_img">
                     <img src="img/adi.JPG" alt="team-img">
@@ -294,21 +309,7 @@
                     <a href="#"><span class="fa fa-google-plus"></span></a>
                   </div>
                 </li>
-                <li>
-                  <div class="team_img">
-                    <img src="img/jason.jpg" alt="team-img">
-                  </div>
-                  <div class="team_content">
-                    <h4 class="team_name">Jason Yue</h4>
-                    <p>Information Systems Specialist</p>
-                  </div>
-                  <div class="team_social">
-                    <a href="#"><span class="fa fa-facebook"></span></a>
-                    <a href="#"><span class="fa fa-twitter"></span></a>
-                    <a href="#"><span class="fa fa-linkedin"></span></a>
-                    <a href="#"><span class="fa fa-google-plus"></span></a>
-                  </div>
-                </li>
+
               </ul>
             </div>
           </div>
