--- a/Forums.html
+++ b/Forums.html
@@ -1,33 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  
-<style>
-.outertable {
-font-family: arial, sans-serif;
-border-collapse: collapse;
-width: 100%;
-height:100%;
-}
-
-.outertd, th {
-	border: 2px solid #17202A;
-	text-align: left;
-	
-	padding: 8px;
-	width: 50%
-}
-
-
-.outertd:nth-child(odd) {
-	background-color: #ECF0F1;
-}
-</style>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SMART - Knowledge Manager</title>
+    <title>SMART - Forums</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -48,15 +25,8 @@ height:100%;
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>  
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
-	<script type="text/javascript" src="sessvars.js"></script>
-	
-	<script type="text/javascript" src="/pico/client.js"></script>
-	<script>pico.load('KM_AED_DB')</script>
-  
   </head>
-<body onload="KnowDet()">
-
-
+<body>
   <!-- Preloader -->
   <div id="preloader">
     <div id="status">&nbsp;</div>
@@ -81,10 +51,10 @@ height:100%;
       <div id="navbar" class="navbar-collapse collapse navbar_area">          
         <ul class="nav navbar-nav navbar-right custom_nav">
           <li><a href="HomePage.html">Home</a></li>
-          <li class="dropdown">
+		  <li class="dropdown">
 			<a data-target="KZTree.html" href="KZTree.html" class="dropdown-toggle">Knowledge Zone<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>            
+              <li><a href="KnowledgeManagement.html">Knowledge Manager</a></li>            
             </ul>
           </li>
           <li><a href="Training.html">Training</a></li>  
@@ -92,7 +62,7 @@ height:100%;
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Support<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="ChatUI.html">FAQ</a></li>
-              <li><a href="#">Forums</a></li>
+              <li class="active"><a href="#">Forums</a></li>
               <li><a href="ContactUs.html">Contact Us</a></li>               
             </ul>
           </li>
@@ -110,136 +80,29 @@ height:100%;
         <div class="service_area">
           <div class="service_title">
             <hr>
-            <h2><center>Knowledge Manager</center></h2>
+            <h2>SMART - <span/>Forums</h2>
             <!--<p>Trusted by Fortune 500 retailers and the world’s top brands.</p>-->
           </div>
 		  
 		  <!-- start slider section -->
 
             <img STYLE="WIDTH:1110px; HEIGHT:400px" src="img/slider/1.jpg" align="middle">
-			<br/><br/>
-			<table width=100% height=100%><tr><td width=50%>
-			<div>
-			<h3><b>Item Summary</b></h3> 
-			<div style = "width:500px;height:260px;border:1.5px solid #000;">
+
+
+
+              <h2><b>What you can do here?</b></h2>
+
+
+				The forums is still under construction. Please bear with us.
+
 			
-
-<body>
-
-<table class="outertable">
-  <tr class = "outertr">
-    <td class="outertd">Descriptor</td>
-    <td class="outertd"><a id="t_descriptor">Something here</a></td>
-  </tr>
-  <tr class = "outertr">
-    <td class="outertd">Parent Category</td>
-    <td class="outertd"><a id="t_parent">Something here</a></td>
-  </tr>
-  <tr class = "outertr">
-    <td class="outertd">Status</td>
-    <td class="outertd"><a id="t_stat">Something here</a></td>
-  </tr>
-  <tr class = "outertr"> 
-    <td class="outertd">UID</td>
-    <td class="outertd"><a id="t_UID">Something here</a></td>
-  </tr>
-  <tr class = "outertr">
-    <td class="outertd">Created</td>
-    <td class="outertd"><a id="t_Created">Something here</a></td>
-  </tr>
-  <tr class = "outertr">
-    <td class="outertd">Modified</td>
-    <td class="outertd"><a id="t_Modified">Something here</a></td>
-  </tr>
-</table>
-<h3><b><input type ="submit" value="Add"></b>
-<b><input type ="submit" value="Edit"></b>
-<b><input type ="submit" value="Delete"></b></h3>
-</body>
-		
-			</div>
-			</div>
-			</td>
-
-			<td width=50%>
-			<h3><b><input type ="submit" value="View Hierarchy"></b></h3>
-			<div style = "width:600px;height:265px;border:1.5px solid #000;">
-			<br>
-			<b><p id="searchitem1">&nbsp;</p></b>
-			<p><a id="searchitem2" href = "" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
-			<p><a id="searchitem3" href = "" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
-			<b><p id="searchitem4">&nbsp;</p></b>
-			<p><a id="searchitem5" href = "" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
-			<p><a id="searchitem6" href = "" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
-			<p><a id="searchitem7" href = "" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
-			<p><a id="searchitem8" href = "" onclick = "KnowDet_Int(this.id)">&nbsp;</a></p>
-			
-			</td></tr></table><br></br>
-            <h3><b>DATA ATTRIBUTES</b></h3> 
-			<div style = "width:1110px;height:600px;border:2px solid #000;">
-			
-<table class = "outertable">
-  <tr style= "height:10%" class = "outertr">
-    <td style= "width:10%" class="outertd"><b>Descriptor</b></td>
-    <td class="outertd"><a id="t2_descriptor">Something here</a></td>
-  </tr>
-  <tr style= "height:10%" class = "outertr">
-    <td style= "width:10%" class="outertd"><b>KnowledgeType</b></td>
-    <td class="outertd"><a id="t2_Knowtype">Something here</a></td>
-  </tr>
-  <tr class = "outertr">
-    <td style= "width:10%" class="outertd"><b>Details</b></td>
-    <td class="outertd"><a id="t2_details">
-	<div style= "height:100%;overflow: auto">
-	<center><img  id="KmDetImg" style="width:600px;height:200px" src="img/KnowledgeHeader.png" align="middle"></center><br>
-
-	<h4><b>Description</b></h4>
-	<p style="text-align:justify" id="para1">
-	The knowledge zone houses knowledge in the form of text, images, videos gathered from various sources such as journals, articles, interviews with experts and so on.
-
-	The panel on the left is a heirarchy of all the knowledge points which are present in this knowledge repository. Clicking on each one will display the content, contained within each of the knowledge point, in this window.
-
-	In case of any issues please get in contact with the support team.
-
-	</p>
-
-	<h4><b>Procedure</b></h4>
-	<p style="text-align:justify" id="para2">
-	The knowledge zone houses knowledge in the form of text, images, videos gathered from various sources such as journals, articles, interviews with experts and so on.
-
-	The panel on the left is a heirarchy of all the knowledge points which are present in this knowledge repository. Clicking on each one will display the content, contained within each of the knowledge point, in this window.
-
-	In case of any issues please get in contact with the support team.
-	
-	</p>
-	
-	</a>
-	</div>
-	</td>
-  </tr>
-  <!-- <tr class = "outertr">
-    <td class="outertd"><b>Procedural</b></td>
-    <td class="outertd"></td>
-  </tr>
-  <tr class = "outertr">
-    <td class="outertd"><b>Causal</b></td>
-    <td class="outertd"></td>
-  </tr> -->
-</table>
-			
-	        </div>
-			<br></br>		
-              <!--<a class="read_more" href="#">read more<i class="fa fa-long-arrow-right"></i></a>-->
         </div>
-
       </div>
     </div>
-	</div>
-	
   </section>
   <!-- End Service area -->
 
-    <!-- start special quote -->
+  <!-- start special quote -->
   <section id="specialQuote">
     <div class="container">
       <div class="row">
@@ -250,8 +113,8 @@ height:100%;
     </div>
   </section>
   <!-- End special quote -->
- 
-    <!-- start footer -->
+
+  <!-- start footer -->
   <footer id="footer">
     <div class="container">
       <div class="row">
@@ -289,7 +152,7 @@ height:100%;
                   <ul>
                     <li><a href="ContactUs.html">Support</a></li>
                     <li><a>Blog</a></li>
-                    <li><a>FAQ</a></li>
+                    <li><a href="ChatUI.html">FAQ</a></li>
                     <li><a href="Testimonials.html">Testimonial Archive</a></li>
                     <li><a>Careers</a></li>
                     <li><a>Developer API</a></li>
@@ -321,82 +184,9 @@ height:100%;
     </div>
   </footer>
   <!-- End footer -->
-  
-  
-  
-  <script>
-  function setField(link){
-  var cur_pressed = link.innerHTML
-  document.getElementById('subarea').value = cur_pressed  
-  }
-  </script>
-  
-  <script>
-  function setField_1(link){
-  var cur_pressed_1 = link.innerHTML
-  document.getElementById('subcat').value = cur_pressed_1  
-  }
-  </script>
-  
-  <script>
-  function KnowDet()
-  {
-  //alert('Welcome '+sessvars.kpid)
-  var str = sessvars.kpid
-  document.getElementById('t_descriptor').innerHTML = sessvars.kpid;
-  document.getElementById('t2_descriptor').innerHTML = sessvars.kpid;
-  KM_AED_DB.KM_DB(str,function(response){
-			document.getElementById('para1').innerHTML = response[0];
-			document.getElementById('para2').innerHTML = response[1];
-			document.getElementById('KmDetImg').src = response[2];	
-			document.getElementById('t_parent').innerHTML = response[3];
-			document.getElementById('t_stat').innerHTML = response[4];
-			document.getElementById('t_UID').innerHTML = response[5];
-			document.getElementById('t_Created').innerHTML = response[6];
-			document.getElementById('t_Modified').innerHTML = response[7];
-			document.getElementById('t2_Knowtype').innerHTML = response[8];
-					
-		});
-	
-  document.getElementById("searchitem1").innerHTML = " PARENTS";
-  KM_AED_DB.getParents(str,function(response){
-			for (var i = 2; i < 4; i++) {
-					if (response[response.length - i + 1])
-						document.getElementById("searchitem" + i).innerHTML = response[response.length - i + 1];}
-						document.getElementById("searchitem" + i).href = "KnowledgeManager_Details.html";
-  
-  
-		});
-		
-  document.getElementById("searchitem4").innerHTML = " CHILDREN";
-  KM_AED_DB.getChildren(str,function(response){
-			//alert(response)
-  			for (var i = 5; i < 9; i++) {
-					if (response[response.length - i + 4])
-						document.getElementById("searchitem" + i).innerHTML = response[response.length - i + 4];}
-						document.getElementById("searchitem" + i).href = "KnowledgeManager_Details.html";
-  
-  
-		});
-		
-  }
 
-  </script>
   
-   <script>
-   
-  function KnowDet_Int(DetID)
-  {
-		var curr_val = document.getElementById(DetID).innerHTML
-		var curr_val = curr_val.replace(/&amp;/g, '&');
-		//alert(curr_val)
-		// Problems where there is an & sign. Try to replace with something else.
-		sessvars.kpid = curr_val;
-		window.location.href = "KnowledgeManager_Details.html";  
-  }
-
-  </script>
-  </script>
+ 
   
   <!-- jQuery Library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
