--- a/HomePage_AfterLogin.html
+++ b/HomePage_AfterLogin.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SMART - Home</title>
-
+	
+	<script type="text/javascript" src="sessvars.js"></script>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- for fontawesome icon css file -->
@@ -26,17 +27,11 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
   
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	
+	
+	
   </head>
-<body>
-  <!-- =========================
-    //////////////This Theme Design and Developed //////////////////////
-    //////////// by www.wpfreeware.com======================--> 
+<body onload="WelcomeMessage()">
 
   <!-- Preloader -->
   <div id="preloader">
@@ -61,7 +56,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse navbar_area">          
         <ul class="nav navbar-nav navbar-right custom_nav">
-          <li class="active"><a href="HomePage.html">Home</a></li>
+          <li class="active"><a href="HomePage_AfterLogin.html">Home</a></li>
 		  <li class="dropdown">
 			<a data-target="KZTree.html" href="KZTree.html" class="dropdown-toggle">Knowledge Zone<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -77,7 +72,13 @@
               <li><a href="ContactUs.html">Contact Us</a></li>               
             </ul>
           </li>
-		  <li><a href = "LoginRegister.html">Log in</a></li>		  
+		  <li class="dropdown">
+            <a href="#" class="dropdown-toggle" id = "welmsg" data-toggle="dropdown" role="button" aria-expanded="false">NULL<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Profile Settings</a></li>
+              <li><a href="HomePage.html">Log Out</a></li>             
+            </ul>
+          </li>	  
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -404,6 +405,20 @@
   </footer>
   <!-- End footer -->
   
+  <script>
+  function WelcomeMessage(){
+  
+  var username = sessvars.username
+  //alert(username)
+  document.getElementById('welmsg').innerHTML = username;
+  
+  
+  }
+  
+  </script>
+  
+  
+  
   <!-- jQuery Library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!-- For content animatin  -->
@@ -421,7 +436,7 @@
   <script src="js/jquery.ui.map.js"></script>
 
   <!-- custom js file include -->
-  <script src="js/custom.js"></script>  
+  <script src="js/custom.js"></script>
       
   </body>
 </html>
