--- a/KZTree.html
+++ b/KZTree.html
@@ -56,8 +56,8 @@
       <div id="navbar" class="navbar-collapse collapse navbar_area">          
         <ul class="nav navbar-nav navbar-right custom_nav">
           <li><a href="HomePage.html">Home</a></li>
-		  <li class="active">
-			<a data-target="KZTree.html" href="KZTree.html" class="dropdown-toggle">Knowledge Zone<span class="caret"></span></a>
+		  <li class="dropdown">
+			<a href="#" class="dropdown-toggle">Knowledge Zone<span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="KnowledgeManager.html">Knowledge Manager</a></li>            
             </ul>
@@ -144,7 +144,7 @@ background-image: "img/slider/3.jpg"
 
 <table width=100% height=100%><tr><td width=50%>
 
-<div class ="part1" style="background-image:url(img/Ktree1.png);position:static;width:400px;height:500px;overflow-y: scroll;border:1.5px solid #223;">
+<div class ="part1" style="background-image:url(img/Ktree2.png);position:static;width:400px;height:500px;overflow-y: scroll;border:1.5px solid #223;">
 
 <div class="treelayout">  
 <ul id = "tree" class="tree">
